# music-video

AudioPlayerDemo/app/: build.gradle
AudioPlayerDemo/app/src/androidTest/java/com/zx/audioplayerdemo/: ExampleInstrumentedTest.java
AudioPlayerDemo/app/src/main/: AndroidManifest.xml
AudioPlayerDemo/app/src/main/java/com/zx/audioplayerdemo/: MainActivity.java
AudioPlayerDemo/app/src/main/java/com/zx/audioplayerdemo/opensles/: SoundTrackController.java
AudioPlayerDemo/app/src/main/jni/: CMakeLists.txt
AudioPlayerDemo/app/src/main/jni/songstudio/: CMakeLists.txt  SongTrackController.cpp  SoundTrackController.cpp  com_zx_audioplayerdemo_opensles_SoundTrackController.h  native-lib.cpp
AudioPlayerDemo/app/src/main/jni/songstudio/3rparty/: CMakeLists.txt
AudioPlayerDemo/app/src/main/jni/songstudio/libcommon/: CMakeLists.txt  CommonTools.h  packet_pool.cpp  packet_pool.h  packet_queue.cpp  packet_queue.h
AudioPlayerDemo/app/src/main/jni/songstudio/libmedia/: CMakeLists.txt  opensl_es_context.cpp  opensl_es_context.h  opensl_es_utils.h.h  sound_service.cpp  sound_service.h
AudioPlayerDemo/app/src/main/jni/songstudio/libmusicdecoder/: CMakeLists.txt  accompany_decoder.cpp  accompany_decoder.h  accompany_decoder_controller.cpp  accompany_decoder_controller.h
AudioPlayerDemo/app/src/main/res/layout/: activity_main.xml
AudioPlayerDemo/app/src/test/java/com/zx/audioplayerdemo/: ExampleUnitTest.java
AudioPlayerDemo/gradle/wrapper/: gradle-wrapper.properties
